refactored string template to MessageFormat and fixed pom.xml